--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1320,7 +1320,7 @@ details[open] .grants-toggle-icon {
 
   .about-pillar-text {
     font-size: 0.95rem;
-    color: var(--global-text-color-light);
+    color: var(--global-text-color);
     line-height: 1.7;
   }
 }
